--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -513,7 +513,6 @@ The subsequent discussion will focus on the relationship between this approximat
 
 \subsection{Relation of this activation energy to the diffusion}
 
-\todo{HERE}
 The xenon diffusion activation energy was calculated for all the 5,125 structures selected for the xenon diffusion coefficient screening presented in section~\ref{sct:xenon_diff_screen}. An energy step of $\delta E$ of \SI{0.1}{\kJ\per\mol} was employed during the energy loop to determine the minimal energy barrier for each unique channel in the material. Subsequently, an activation energy can be derived and compared to the diffusion coefficients. To avoid any potential noise arising from the MD simulation initialization problem, materials with significantly different energy barrier values from one channel to another (standard deviation of energy barrier values higher than \SI{1}{\kJ\per\mol}) were excluded. These materials accounted for only 145 out of the total 5,125 materials.
 
 
@@ -550,7 +549,7 @@ In the final section of this chapter, the combination of geometrical descriptors
 
 \subsection{ML prediction model}
 
-Calculating diffusion coefficients is an extremely time-consuming process, complicated by various challenges in the final fitting procedure. Out of the initial 6,525 structures, over a thousand were lost, resulting in a success rate of approximately 79\%, mainly due to either insufficient time for obtaining a usable MSD or MSD that describe non-diffusional regimes. By utilizing an unconventionally higher time step, the time required to investigate the diffusion regime could be reduced to just a couple of days per structure. Compared to the \SI{12}{seconds} required for energy barrier calculations with an energy step of \SI{0.1}{\kJ\per\mol}, and the few minutes required to run Zeo++, the MD method is extremely slow. Even under highly optimistic assumptions for MD simulations, the comparison is essentially between 24 hours and at most 10 minutes per structure, which corresponds to an approximate speedup of 150-fold (though, in reality, it is much higher). However, the relationships between energy barrier, PLD, and diffusion coefficient remain unclear --- the Arrhenius law generalizes limited consideration of the weak correlation shown in Figure~\ref{fgr:barrier_diffusion_a}. The aim of the ML model is to establish this relationship and achieve accurate predictions while significantly reducing the time required for predicting the diffusion coefficient of future selective materials.
+Calculating diffusion coefficients is an extremely time-consuming process, complicated by various challenges in the final fitting procedure. Out of the initial 6,525 structures, over a thousand were not completely evaluated with MD simulations, resulting in a success rate of approximately 79\%, mainly due to either insufficient time for obtaining a usable MSD or MSD that describe non-diffusional regimes. By utilizing an unconventionally higher time step, the time required to investigate the diffusion regime could be reduced to just a couple of days per structure. Compared to the \SI{12}{seconds} required for energy barrier calculations with an energy step of \SI{0.1}{\kJ\per\mol}, and the few minutes required to run Zeo++, the MD method is extremely slow. Even under highly optimistic hypotheses for MD simulations, the comparison is essentially between 24 hours and at most 10 minutes per structure, which corresponds to an approximate speedup of 150-fold (though, in reality, it is much higher). However, the relationships between energy barrier, PLD, and diffusion coefficient remain unclear --- the Arrhenius law generalizes limited consideration of the weak correlation shown in Figure~\ref{fgr:barrier_diffusion_a}. The aim of the ML model is to establish this relationship and achieve accurate predictions while significantly reducing the time required for predicting the diffusion coefficient of future selective materials.
 
 
 \begin{table}[ht]
@@ -560,15 +559,15 @@ Calculating diffusion coefficients is an extremely time-consuming process, compl
   \hline
     Feature name  &  Symbol   &   Description\\
   \hline
-      "Framework Mass (g/mol)" &   $M_f$ &   Molar mass of the framework material considered  \\
-      "Framework Density (kg/m\^3)" &   $\rho_f$ &   Mass density of the framework material considered  \\
-      "ASA\_m2/cm3\_1.2" &   SA &   Surface area accessible to a \SI{1.2}{\angstrom} radius probe in \si{\square\m\per\cubic\cm}  \\
+      "Framework Mass (g/mol)" &   $M_f$ &   Molar mass of the framework material considered (in~\si{\g\per\mol}) \\
+      "Framework Density (kg/m\textasciicircum{}3)" &   $\rho_f$ &   Mass density of the framework material considered (in~\si{\kg\per\cubic\m})  \\
+      "ASA\_m2/cm3\_1.2" &   SA &   Surface area accessible to a \SI{1.2}{\angstrom} radius probe (in \si{\square\m\per\cubic\cm})  \\
       "PO\_VF\_2.0" &  VF $\tfrac{V\e{pore}}{V\e{tot}}$ &  The void fraction or the ratio of the pore volume occupied by a \SI{2}{\angstrom} radius probe over the total material volume  \\
-      "D\_f\_vdw\_uff298" &   PLD or $D_f$  &   Pore limiting diameter of the largest free sphere diameter calculated using the UFF dependent definition  \\
-      "D\_if\_vdw\_uff298" &   LCD or $D_{if}$ &   The largest included free sphere diameter in a free diffusion path calculated using the UFF dependent definition  \\
-      "Adsorption\_enthalpy" &   $\Delta\e{ads}H_0\ex{Xe}(\text{channel})$  &   Xenon adsorption enthalpy within a channel calculated using the barrier algorithm  \\
-      "barrier\_kjmol" &   $E\e{a}$  &   difference between transition state energy $E\e{trans}$ and the minimal energy $E\e{a}$ within a channel \\
-      "delta\_LCD\_PLD" &   LCD$-$PLD  &   difference between the LCD and PLD values \\
+      "D\_f\_vdw\_uff298" &   PLD or $D_f$  &   Pore limiting diameter of the largest free sphere diameter calculated using the UFF dependent definition (in \si{\angstrom}) \\
+      "D\_if\_vdw\_uff298" &   LCD or $D_{if}$ &   The largest included free sphere diameter in a free diffusion path calculated using the UFF dependent definition (in \si{\angstrom}) \\
+      "Adsorption\_enthalpy" &   $\Delta\e{ads}H_0\ex{Xe}(\text{channel})$  &   Xenon adsorption enthalpy within a channel calculated using the barrier algorithm (in \si{\kJ\per\mol}) \\
+      "barrier\_kjmol" &   $E\e{a}$  &   difference between transition state energy $E\e{trans}$ and the minimal energy $E\e{a}$ within a channel (in \si{\kJ\per\mol}) \\
+      "delta\_LCD\_PLD" &   LCD$-$PLD  &   difference between the LCD and PLD values (in \si{\angstrom}) \\
       "1D\_chan" &  $\mathbb{1}\e{1D}$   &   categorical feature: 1 if there is a unidimensional channel, 0 else \\
       "2D\_chan" &  $\mathbb{1}\e{2D}$   &   categorical feature: 1 if there is a bidimensional channel, 0 else \\
       "3D\_chan" &  $\mathbb{1}\e{3D}$   &   categorical feature: 1 if there is a tridimensional channel, 0 else \\
@@ -577,7 +576,7 @@ Calculating diffusion coefficients is an extremely time-consuming process, compl
   \caption{ Features used in the ML model for diffusion coefficient prediction. }\label{Table:feat_diff}
 \end{table}
 
-The ML model was trained using {80\%} of the 4,873 structures that survived all the different imposed filters. A total of 12 descriptors described in Table\ref{Table:feat_diff} were employed to train the model. The hyperparameters of the XGBoost model were determined using a similar approach as in Chapter 4, and the following values were utilized:
+The ML model was trained using {80\%} of the 4,873 structures that survived all the different filters imposed. A total of 12 descriptors described in Table~\ref{Table:feat_diff} were employed to train the ML model. The hyperparameters of the XGBoost model were determined using a similar approach as in Chapter 4, and the following values were utilized:
 
 \begin{lstlisting}[language=Python]
   optimal_params = {
@@ -593,7 +592,7 @@ The ML model was trained using {80\%} of the 4,873 structures that survived all 
     }
 \end{lstlisting}
 
-With this parameterization, this ML model predicts the $\log_{10}$ of the diffusion coefficient (\si{\square\cm\per\s}) with a root mean square error of $0.26$ on the test set and a mean absolute error of $0.18$. This implies that the exponent $\alpha$ is known with an error of approximately $0.2$ when expressing the diffusion coefficient as $D = 10^{\alpha}$. For comparison, the previous ML model for thermodynamic selectivity predicts the $\log_{10}$ of selectivity with an error of about $0.07$. It is important to note that the goal here is not to predict the exact values of the diffusion coefficient due to the inherent noise the values generated by MD simulation (about {20\% relative error for \texttt{KAXQIL}}). Instead, the objective is to determine the order of magnitude of the diffusion coefficient. The proposed model achieves this objective effectively, as illustrated in Figure~\ref{fgr:diffusion_pred}, where the predicted diffusion coefficient aligns closely with the true values when represented on a log scale.
+With this parameterization, this ML model predicts the $\log_{10}$ of the diffusion coefficient (in units of \si{\square\cm\per\s}) with a root mean square error of $0.26$ on the test set and a mean absolute error of $0.18$. This implies that the exponent $\alpha$ is known with an error of approximately $0.2$ when expressing the diffusion coefficient as $D = 10^{\alpha}$. For comparison, the previous ML model for thermodynamic selectivity predicts the $\log_{10}$ of selectivity with an error of about $0.07$. It is important to note that the goal here is not to predict the exact values of the diffusion coefficient due to the inherent noise the values generated by MD simulation (about {20\% relative error for \texttt{KAXQIL}}). Instead, the objective is to determine the order of magnitude of the diffusion coefficient. The proposed model achieves this objective effectively, as illustrated in Figure~\ref{fgr:diffusion_pred}, where the predicted diffusion coefficient aligns closely with the true values when represented on a log scale.
 
 
 \begin{figure}[ht]
@@ -611,7 +610,7 @@ With this parameterization, this ML model predicts the $\log_{10}$ of the diffus
     \caption{ (a) Comparison of the $\log_{10}$ of the diffusion coefficient predicted by an ML model and the true values. (b) Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases and seems to stabilize near $0.25$. }
 \end{figure}
 
-The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model).
+The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model).\todo{Add cross-validation performance as a point of comparison}
 
 \begin{figure}[ht]
   \centering
@@ -648,18 +647,17 @@ The final predicted values are only marginally influenced by the channel dimensi
 
 This section presented an ML-based approach for computing diffusion coefficient values using computationally cheaper energy descriptors combined with geometrical descriptors. This method is much more efficient than the conventional MD simulation, as it requires only one costly training session using MD simulations at the beginning. To further accelerate the process, alternative methods can be employed to generate diffusion coefficients, as demonstrated by Mace et al.\ in their work \autocite{Mace_2019}. This work is currently in progress, and it is expected that the future implementation will yield diffusion values comparable to those derived from MD simulations.
 
-\clearpage
 \section{Beyond self-diffusion screenings}
 
-In this chapter, different methods have been introduced to evaluate transport properties of an adsorbate inside a nanoporous material. The most accurate method requires considerable computational time and meticulous attention to achieve optimal accuracy. For instance, careful parameter selection in MD simulations is essential to obtain relevant mean square displacement data for diffusion coefficient calculation. A screening of diffusion coefficient values for xenon and krypton has been performed to identify materials with notable thermodynamic and kinetic separation performance. These values have also served as baseline data for testing other methods such as activation energy detection and an ML model. The final ML model seems to show promising performance, achieving a root mean squared error of only $0.25$ on the base-10 logarithm scale of the diffusion coefficient. This indicates the ability to accurately assess the order of magnitude of diffusion properties. Such assessments can help identify potential diffusion limitations in promising materials and optimize this property to expedite equilibration in adsorption-based separations. Furthermore, the techniques developed in this study, as well as future developments, can be applied to membrane separation processes.
+In this chapter, different methods have been introduced for evaluating transport properties of an adsorbate inside a nanoporous material. The most accurate method requires considerable computational time and ``meticulous attention'' to achieve optimal accuracy. For instance, careful parameter selection in MD simulations is essential to obtain relevant mean square displacement data for diffusion coefficient calculation. A screening of diffusion coefficient values for xenon and krypton has been performed to identify materials with notable thermodynamic and kinetic separation performance. These values have also served as baseline data for testing other methods such as activation energy detection and an ML model. The final ML model seems to show promising performance, achieving a root mean squared error of only $0.25$ on the base-10 logarithm scale of the diffusion coefficient. This indicates the ability to accurately assess the order of magnitude of diffusion properties. Such assessments can help identify potential diffusion limitations in promising materials and optimize this property to expedite equilibration in adsorption-based separations. Furthermore, the techniques developed in this study, as well as future developments, can be applied to membrane separation processes.
 
 The obtained results provide the foundation for various follow-up studies. For instance, the effect of tortuosity on diffusion coefficient values and relevant definitions for tortuosity remain open questions. Unidimensional channels can be particularly examined, where the frequency and magnitude of changes in direction can be analyzed to quantify their occurrence\autocite{Bullitt_2003}. Another challenge could consist in measuring different diffusion regimes, such as single-file diffusion characterized by a square root time relation in the mean square displacement (MSD)\autocite{Lin_2005}. In this study, materials with MSD relations other than linear were excluded since only materials with high determination coefficients in the linear fit were considered.
 
-To expand beyond conventional studies, the diffusion coefficient can be utilized to model breakthrough experiments, is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software\autocite{Sharma_2023} opens new perspectives in modeling. For instance, the axial dispersion coefficient used in a breakthrough model can be calculated using transport properties, combined with thermodynamic data on the adsorption process of xenon and krypton. This presents an opportunity for experiment-theory comparison, fostering a virtuous feedback loop to improve modeling and facilitate the discovery of superior materials.
+To expand beyond conventional studies, the diffusion coefficient could be utilized to model breakthrough experiments, which is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software\autocite{Sharma_2023} opens new perspectives in modeling. For instance, the axial dispersion coefficient used in a breakthrough model can be calculated using transport properties, combined with thermodynamic data on the adsorption process of xenon and krypton. This presents an opportunity for experiment-theory comparison, fostering a virtuous feedback loop to improve modeling and facilitate the discovery of superior materials.
 
-The diffusion coefficients calculated using the aforementioned methodologies solely describe self-diffusion in an infinitely diluted environment. To better describe transport properties in industrial conditions, it is necessary to study diffusion coefficients in a higher loading environment to account for host--host interactions. Furthermore, mixture simulations can be directly conducted to obtain the so-called Onsager diffusion coefficients, which are based on the Maxwell-Stefan diffusion equation rather than Fick's equation.\autocite{Krishna_2008} The calculation of such quantities requires significant computational resources, as MD simulations on mixtures at relatively high loading must be run for a sufficiently long duration to capture the diffusion regime. Therefore, applying this approach to large-scale screening is impractical, but some interesting materials can be tested to study the effects of mixtures and loading on transport properties.
+The diffusion coefficients calculated using the aforementioned methodologies solely describe self-diffusion in an infinitely diluted environment. To better describe transport properties in industrial conditions, it will be necessary, in the future, to study diffusion coefficients in a higher loading environment to account for host--host interactions. Furthermore, mixture simulations can be directly conducted to obtain the so-called Onsager diffusion coefficients, which are based on the Maxwell-Stefan diffusion equation rather than Fick's equation.\autocite{Krishna_2008} The calculation of such quantities requires significant computational resources, as MD simulations on mixtures at relatively high loading must be run for a sufficiently long duration to capture the diffusion regime. Therefore, applying this approach to large-scale screening is impractical, but some interesting materials can be tested to study the effects of mixtures and loading on transport properties.
 
-This chapter presented a particular aspect that was not considered in standard high-throughput screenings for xenon/krypton separation, namely transport properties. The subsequent chapter will focus on other factors that can contribute to a more comprehensive picture, bringing it closer to experimental systems. The flexibility of the nanoporous framework, for instance, can impact adsorption performance.\autocite{Witman_2017} Additionally, the difference in polarizability between xenon and krypton can be better leveraged in the screening process if it can be modeled through the use of higher-level theories than the Lennard-Jones potential. Both the flexibility and polarization aspects are still under investigation, and although some results will be presented, the chapter mainly serves as a compilation of potential research focuses and solutions to enhance the current understanding.
+This chapter presented a particular aspect that is often not considered in standard high-throughput screenings for xenon/krypton separation, namely transport properties. The subsequent chapter will detail some of the other factors that can contribute to a more comprehensive picture, bringing it closer to experimental systems. The flexibility of the nanoporous framework, for instance, can impact adsorption performance.\autocite{Witman_2017} Additionally, the difference in polarizability between xenon and krypton can be better leveraged in the screening process if it can be modeled through the use of higher-level theories than the Lennard-Jones potential. Both the flexibility and polarization aspects are still under investigation, and although some results will be presented, the chapter mainly serves as a compilation of potential research focuses and solutions to enhance the current understanding.
 
 \OnlyInSubfile{\printglobalbibliography}
 
