--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -164,7 +164,7 @@ By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_
 
 To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\times 10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\times 10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics is more straightforward than for more complex pore architectures that will be tackled later in this chapter.
 
-Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. \todo{1 fs and 2.5 billion steps, results to compare} An initial calculation with 500 million steps and a timestep of \SI{5}{\fs} was performed to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns} was considered, and the MSD was calculated from approximately 200 sampled trajectories, resulting in reasonably accurate values. A more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s}\todo{check the} was obtained, which is very close to the value obtained using the previous approach. The value is slightly higher (which was expected), as the previous value was overestimated. Thus, this approach is consistent with the previous one.
+Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. \todo{1 fs and 2.5 billion steps, results to compared on the same timescale {2}--{47}~\si{\ns} } An initial calculation with 500 million steps and a timestep of \SI{5}{\fs} was performed to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns} was considered, and the MSD was calculated from approximately 200 sampled trajectories, resulting in reasonably accurate values. A more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s} was obtained, which is very close to the value obtained using the previous approach. The value is slightly higher (which was expected), as the previous value was overestimated. Thus, this approach is consistent with the previous one.
 
 \begin{figure}[ht]
   \centering
@@ -179,9 +179,9 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations, such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, only 432 structures \todo{Average number of timsteps completed} completed the simulations at the end of the process. However, this does not imply that the MSD data cannot be utilized for determining diffusion coefficients since the MSD are printed. In fact, 5,125 MSD data are exploitable even if the total 500 millions steps were only partially completed. 
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations, such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, only 432 structures \todo{Average number of timsteps completed} completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 millions steps were only partially completed. 
 
-To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) were analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales was chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ were removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit between the 2--47\si{\ns} and 50--950~\si{\ns} timescales.\todo{check FX}
+To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) were analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales was chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ were removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit between the 2--47\si{\ns} and 50--950~\si{\ns} timescales.\todo{check FX, if better}
 
 This approach focuses exclusively on the linear relations between the MSD and time for determining self-diffusion at infinite dilution. The analysis does not explore the nature of the transport property (e.g., single-file diffusion\autocite{Lin_2005}), by comparing, for example, the exponent of the generalized formula $\text{MSD}(\tau) = K_\alpha\tau^\alpha$ with structural descriptors. The more complex diffusion at higher loading values, which may be more accurately described by a collective diffusion coefficient instead of the self-diffusion coefficient, is also not studied. The objective of this study is to identify materials that do not present kinetic limitations, as observed in the case of \texttt{KAXQIL}\autocite{Banerjee2012} (where the diffusion coefficient of xenon is approximately ten thousand times lower in the material than outside).
 
