--- a/cover.tex
+++ b/cover.tex
@@ -8,12 +8,12 @@
 \specialty{Chimie Physique}
 \date{26 Septembre 2023}
 
-\jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
+\jurymember{1}{Anne \textsc{Boutin}}{Directrice de Recherche CNRS, ENS}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Full Professor, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Christelle \textsc{Miqueu}}{Maître de Conférences, Univ. de Pau \& Pays Adour}{Rapportrice}
 \jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano}{Membre invité}
-\jurymember{5}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant thèse}
-\jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
+\jurymember{5}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Co-encadrant thèse}
+\jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche CNRS, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
 
